--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,600,800&display=swap");
+
 body {
   margin: 0;
-  font-family: "Lato", sans-serif;
+  font-family: "Raleway", sans-serif;
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
