--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,600,800&display=swap");
+
 body {
   margin: 0;
-  font-family: "Lato", sans-serif;
-  overflow: hidden;
+  font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
