--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -2,8 +2,19 @@
 
 body {
   margin: 0;
+  color: white;
+  background-color: #222e7c;
   font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+}
+
+::selection {
+  color: white;
+  background: black;
+}
+
+::placeholder {
+  color: black;
 }
